Remove cabin from datset

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -605,6 +605,50 @@
     "Cabin has too many missing values so remove this features. <br>\n",
     "Fill missing values in Age, Embarked and Fare."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Handle missing values."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remove Cabin in train and test dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp',\n",
+      "       'Parch', 'Ticket', 'Fare', 'Embarked'],\n",
+      "      dtype='object')\n",
+      "Index(['PassengerId', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch',\n",
+      "       'Ticket', 'Fare', 'Embarked'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remove cabin in train dataset\n",
+    "train_df = train_df.drop(['Cabin'], axis=1)\n",
+    "print(train_df.columns)\n",
+    "\n",
+    "# remove cabin in test dataset\n",
+    "test_df = test_df.drop(['Cabin'], axis=1)\n",
+    "print(test_df.columns)"
+   ]
   }
  ],
  "metadata": {
