Delete unimportant features

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -722,18 +722,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "891"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "891\n",
+      "418\n"
+     ]
     }
    ],
    "source": [
@@ -769,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +776,7 @@
        "891"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,16 +797,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "891"
+       "418"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,6 +815,39 @@
     "# fill with mean value\n",
     "test_df[\"Fare\"] = test_df[\"Fare\"].fillna(test_df[\"Fare\"].mean())\n",
     "test_df[\"Fare\"].count()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Delete unimportant features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Survived', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare',\n",
+      "       'Embarked'],\n",
+      "      dtype='object')\n",
+      "Index(['Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare', 'Embarked'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop unimportant features from train data\n",
+    "train_df = train_df.drop([\"PassengerId\", \"Name\", \"Ticket\"], axis=1)\n",
+    "print(train_df.columns)\n",
+    "# Drop unimportant features from test data\n",
+    "test_df = test_df.drop([\"PassengerId\", \"Name\", \"Ticket\"], axis=1)\n",
+    "print(test_df.columns)"
    ]
   }
  ],
