--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -849,6 +849,59 @@
     "test_df = test_df.drop([\"PassengerId\", \"Name\", \"Ticket\"], axis=1)\n",
     "print(test_df.columns)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convert categorical data to numerical data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Survived  Pclass   Age  SibSp  Parch     Fare  Sex_female  Sex_male  \\\n",
+      "0         0       3  22.0      1      0   7.2500           0         1   \n",
+      "1         1       1  38.0      1      0  71.2833           1         0   \n",
+      "2         1       3  26.0      0      0   7.9250           1         0   \n",
+      "3         1       1  35.0      1      0  53.1000           1         0   \n",
+      "4         0       3  35.0      0      0   8.0500           0         1   \n",
+      "\n",
+      "   Embarked_C  Embarked_Q  Embarked_S  \n",
+      "0           0           0           1  \n",
+      "1           1           0           0  \n",
+      "2           0           0           1  \n",
+      "3           0           0           1  \n",
+      "4           0           0           1  \n",
+      "   Pclass   Age  SibSp  Parch     Fare  Sex_female  Sex_male  Embarked_C  \\\n",
+      "0       3  34.5      0      0   7.8292           0         1           0   \n",
+      "1       3  47.0      1      0   7.0000           1         0           0   \n",
+      "2       2  62.0      0      0   9.6875           0         1           0   \n",
+      "3       3  27.0      0      0   8.6625           0         1           0   \n",
+      "4       3  22.0      1      1  12.2875           1         0           0   \n",
+      "\n",
+      "   Embarked_Q  Embarked_S  \n",
+      "0           1           0  \n",
+      "1           0           1  \n",
+      "2           1           0  \n",
+      "3           0           1  \n",
+      "4           0           1  \n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df = pd.get_dummies(train_df)\n",
+    "test_df = pd.get_dummies(test_df)\n",
+    "print(train_df.head())\n",
+    "print(test_df.head())"
+   ]
   }
  ],
  "metadata": {
