Get input and label data

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -902,6 +902,58 @@
     "print(train_df.head())\n",
     "print(test_df.head())"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get input and label data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Pclass   Age  SibSp  Parch     Fare  Sex_female  Sex_male  Embarked_C  \\\n",
+      "0       3  22.0      1      0   7.2500           0         1           0   \n",
+      "1       1  38.0      1      0  71.2833           1         0           1   \n",
+      "2       3  26.0      0      0   7.9250           1         0           0   \n",
+      "3       1  35.0      1      0  53.1000           1         0           0   \n",
+      "4       3  35.0      0      0   8.0500           0         1           0   \n",
+      "\n",
+      "   Embarked_Q  Embarked_S  \n",
+      "0           0           1  \n",
+      "1           0           0  \n",
+      "2           0           1  \n",
+      "3           0           1  \n",
+      "4           0           1  \n",
+      "0      0\n",
+      "1      1\n",
+      "2      1\n",
+      "3      1\n",
+      "4      0\n",
+      "      ..\n",
+      "886    0\n",
+      "887    1\n",
+      "888    0\n",
+      "889    1\n",
+      "890    0\n",
+      "Name: Survived, Length: 891, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train = train_df.drop([\"Survived\"], axis=1)\n",
+    "y_train = train_df[\"Survived\"]\n",
+    "print(x_train.head())\n",
+    "print(y_train)"
+   ]
   }
  ],
  "metadata": {
