Analyzed data and get the input, label and test data

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "[891 rows x 12 columns]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "[418 rows x 11 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "891"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
        "418"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -933,26 +933,20 @@
       "2           0           1  \n",
       "3           0           1  \n",
       "4           0           1  \n",
-      "0      0\n",
-      "1      1\n",
-      "2      1\n",
-      "3      1\n",
-      "4      0\n",
-      "      ..\n",
-      "886    0\n",
-      "887    1\n",
-      "888    0\n",
-      "889    1\n",
-      "890    0\n",
-      "Name: Survived, Length: 891, dtype: int64\n"
+      "0    0\n",
+      "1    1\n",
+      "2    1\n",
+      "3    1\n",
+      "4    0\n",
+      "Name: Survived, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "x_train = train_df.drop([\"Survived\"], axis=1)\n",
-    "y_train = train_df[\"Survived\"]\n",
-    "print(x_train.head())\n",
-    "print(y_train)"
+    "input_data = train_df.drop([\"Survived\"], axis=1)\n",
+    "label_data = train_df[\"Survived\"]\n",
+    "print(input_data.head())\n",
+    "print(label_data.head())"
    ]
   }
  ],
