Build the model

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -19,8 +19,10 @@
    "source": [
     "# Import libraries\n",
     "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "%matplotlib inline"
@@ -947,6 +949,32 @@
     "label_data = train_df[\"Survived\"]\n",
     "print(input_data.head())\n",
     "print(label_data.head())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predict the result"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Build the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build the random forest model\n",
+    "m_classifier = RandomForestClassifier()"
    ]
   }
  ],
