Fill missing values in Embarked

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -718,6 +718,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyze Fare feature"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 260,
    "metadata": {},
@@ -793,6 +801,22 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No family, Embarked: S, Pclass: 3 and Sex: male"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill missing value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 261,
    "metadata": {},
@@ -812,6 +836,29 @@
     "df_test.loc[152, \"Fare\"] = df_train[(df_train[\"Pclass\"] == 3) & (df_train[\"Sex\"] == \"male\") & (df_train[\"SibSp\"] == 0) & (df_train[\"Embarked\"] == \"S\")].loc[:, \"Fare\"].mean()\n",
     "df_test[\"Fare\"].isna().sum()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Embarked Feature"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyze Embarked feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
